--- a/examples/example.ipynb
+++ b/examples/example.ipynb
@@ -433,7 +433,7 @@
    ],
    "source": [
     "def f(t):\n",
-    "    n = t.numNodes()\n",
+    "    n = t.nodes()\n",
     "    return t.apply_power(lambda x : x - x.antipode().antipode(), n)\n",
     "\n",
     "for t in rt.trees_up_to_order(4):\n",
@@ -473,7 +473,7 @@
    ],
    "source": [
     "def f(t):\n",
-    "    n = t.numNodes()\n",
+    "    n = t.nodes()\n",
     "    f1 = lambda x : x + x.antipode()\n",
     "    f2 = lambda x : x - x.antipode().antipode()\n",
     "    f3 = lambda x : x.apply_power(f2, n-1).apply(f1)\n",
