--- a/examples/generate_trees.ipynb
+++ b/examples/generate_trees.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import rootedtrees as rt"
+    "import kauri as kr"
    ]
   },
   {
@@ -53,10 +53,10 @@
     }
    ],
    "source": [
-    "t = rt.Tree([[[[]],[]],[[]]])\n",
-    "rt.display(t)\n",
+    "t = kr.Tree([[[[]],[]],[[]]])\n",
+    "kr.display(t)\n",
     "print(\"Next tree:\")\n",
-    "rt.display(rt.next_tree(t))"
+    "kr.display(next(t))"
    ]
   },
   {
@@ -299,8 +299,8 @@
    "source": [
     "for n in range(6):\n",
     "    print(\"Trees of order \" + str(n) + \":\")\n",
-    "    for t in rt.trees_of_order(n):\n",
-    "        rt.display(t)"
+    "    for t in kr.trees_of_order(n):\n",
+    "        kr.display(t)"
    ]
   },
   {
@@ -417,8 +417,8 @@
    ],
    "source": [
     "print(\"All trees up to order 4:\")\n",
-    "for t in rt.trees_up_to_order(4):\n",
-    "    rt.display(t)"
+    "for t in kr.trees_up_to_order(4):\n",
+    "    kr.display(t)"
    ]
   }
  ],
