--- a/examples/rk_example.ipynb
+++ b/examples/rk_example.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from rootedtrees import *\n",
+    "from kauri import *\n",
     "import matplotlib.pyplot as plt\n",
     "from math import sqrt\n",
     "import numpy as np"
