clean up + docs

--- a/docs/refs.bib
+++ b/docs/refs.bib
@@ -1,3 +1,37 @@
+@article{alexander1990solving,
+  title={Solving ordinary differential equations i: Nonstiff problems (e. hairer, sp norsett, and g. wanner)},
+  author={Alexander, Roger},
+  journal={Siam Review},
+  volume={32},
+  number={3},
+  pages={485},
+  year={1990},
+  publisher={Society for Industrial and Applied Mathematics}
+}
+
+@article{foissy2013introduction,
+  title={An introduction to Hopf algebras of trees},
+  author={Foissy, Lo{\"\i}c},
+  journal={preprint},
+  year={2013}
+}
+
+@book{butcher2016numerical,
+  title={Numerical methods for ordinary differential equations},
+  author={Butcher, John Charles},
+  year={2016},
+  publisher={John Wiley \& Sons}
+}
+
+@incollection{connes1999hopf,
+  title={Hopf algebras, renormalization and noncommutative geometry},
+  author={Connes, Alain and Kreimer, Dirk},
+  booktitle={Quantum field theory: perspective and prospective},
+  pages={59--109},
+  year={1999},
+  publisher={Springer}
+}
+
 @article{chartier2010algebraic,
   title={Algebraic structures of B-series},
   author={Chartier, Philippe and Hairer, Ernst and Vilmart, Gilles},
