--- a/examples/example.ipynb
+++ b/examples/example.ipynb
@@ -7,7 +7,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import kauri as kr"
+    "import kauri as kr\n",
+    "import kauri.bck as bck"
    ]
   },
   {
@@ -45,7 +46,7 @@
    "id": "6505b0c5-7462-49df-97c7-b1bd033384f2",
    "metadata": {},
    "source": [
-    "Since our trees are planar, different orderings of the same tree are treated as equal. The Tree.sorted() method gives the ordering of the tree with the heaviest branches on the right"
+    "Since our trees are non-planar, different orderings of the same tree are treated as equal. The Tree.sorted() method gives the ordering of the tree with the heaviest branches on the right"
    ]
   },
   {
@@ -260,7 +261,7 @@
     }
    ],
    "source": [
-    "s = kr.Tree([[],[[]]]).antipode()\n",
+    "s = bck.antipode(kr.Tree([[],[[]]]))\n",
     "kr.display(s)\n",
     "kr.display(s.singleton_reduced())"
    ]
@@ -282,7 +283,7 @@
    ],
    "source": [
     "explicit_midpoint = kr.RK([[0,0],[1/2,0]], [0,1])\n",
-    "s = kr.Tree([[],[]]).antipode()\n",
+    "s = bck.antipode(kr.Tree([[],[]]))\n",
     "\n",
     "print(explicit_midpoint.elementary_weights(s))\n",
     "print(explicit_midpoint.elementary_weights(s.singleton_reduced())) #If the RK scheme is consistent, this gives the same result"
@@ -325,7 +326,7 @@
    ],
    "source": [
     "t1 = kr.Tree([[],[],[[]]])\n",
-    "t2 = t1.antipode()\n",
+    "t2 = bck.antipode(t1)\n",
     "kr.display(t2)\n",
     "kr.display(t2.singleton_reduced())"
    ]
@@ -502,7 +503,7 @@
     }
    ],
    "source": [
-    "s = kr.Tree([[],[]]).antipode()\n",
+    "s = bck.antipode(kr.Tree([[],[]]))\n",
     "print(s, \"\\n\")\n",
     "\n",
     "for c, f in s:\n",
@@ -527,7 +528,7 @@
     "#Maps\n",
     "ident = kr.Map(lambda x : x)\n",
     "counit = kr.Map(lambda x : 1 if x == kr.Tree(None) else 0)\n",
-    "S = kr.Map(lambda x : x.antipode())\n",
+    "S = bck.antipode\n",
     "a = kr.Map(lambda x : 1. / x.factorial())"
    ]
   },
