--- a/examples/rk_example.ipynb
+++ b/examples/rk_example.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from kauri import *\n",
+    "import kauri as kr\n",
     "import matplotlib.pyplot as plt\n",
     "from math import sqrt\n",
     "import numpy as np"
@@ -45,8 +45,8 @@
     }
    ],
    "source": [
-    "for t in trees_up_to_order(3):\n",
-    "    print(RK_order_cond(t, 3, explicit = True), \" = 0 \\n\")"
+    "for t in kr.trees_up_to_order(3):\n",
+    "    print(kr.rk_order_cond(t, 3, explicit = True), \" = 0 \\n\")"
    ]
   },
   {
@@ -89,13 +89,13 @@
     }
    ],
    "source": [
-    "A_mask = [[1,0,1],\n",
+    "a_mask = [[1,0,1],\n",
     "         [1,1,1],\n",
     "         [0,1,1]]\n",
     "b_mask = [1,0,1]\n",
     "\n",
-    "for t in trees_up_to_order(3):\n",
-    "    print(RK_order_cond(t, 3, explicit = False, A_mask = A_mask, b_mask = b_mask), \" = 0 \\n\")"
+    "for t in kr.trees_up_to_order(3):\n",
+    "    print(kr.rk_order_cond(t, 3, explicit = False, a_mask = a_mask, b_mask = b_mask), \" = 0 \\n\")"
    ]
   },
   {
@@ -155,7 +155,7 @@
    "source": [
     "A = [[0,0], [0.5,0]]\n",
     "b = [0,1]\n",
-    "method = RK(A,b)\n",
+    "method = kr.RK(A,b)\n",
     "\n",
     "print(\"Order: \", method.order())"
    ]
@@ -229,7 +229,7 @@
    "source": [
     "A = [[0.5]]\n",
     "b = [1]\n",
-    "method = RK(A,b)\n",
+    "method = kr.RK(A,b)\n",
     "\n",
     "print(\"Order: \", method.order())"
    ]
@@ -304,7 +304,7 @@
     "A = [[1/4, 1/4 - sqrt(3) / 6],\n",
     "    [1/4 + sqrt(3)/6, 1/4]]\n",
     "b = [1/2, 1/2]\n",
-    "method = RK(A,b)\n",
+    "method = kr.RK(A,b)\n",
     "\n",
     "print(\"Order: \", method.order())"
    ]
