clean up + docs

--- a/docs/refs.bib
+++ b/docs/refs.bib
@@ -63,3 +63,14 @@
   year={2006},
   publisher={Springer}
 }
+
+@article{beyer1980constant,
+  title={Constant time generation of rooted trees},
+  author={Beyer, Terry and Hedetniemi, Sandra Mitchell},
+  journal={SIAM Journal on Computing},
+  volume={9},
+  number={4},
+  pages={706--712},
+  year={1980},
+  publisher={SIAM}
+}
