Added citation and docs

--- a/docs/refs.bib
+++ b/docs/refs.bib
@@ -74,3 +74,21 @@
   year={1980},
   publisher={SIAM}
 }
+
+@article{aguiar2006combinatorial,
+  title={Combinatorial Hopf algebras and generalized Dehn--Sommerville relations},
+  author={Aguiar, Marcelo and Bergeron, Nantel and Sottile, Frank},
+  journal={Compositio Mathematica},
+  volume={142},
+  number={1},
+  pages={1--30},
+  year={2006},
+  publisher={London Mathematical Society}
+}
+
+@misc{shmelev2025ees,
+  title={Explicit and Effectively Symmetric Runge-Kutta Methods},
+  author={Shmelev, Daniil and Ebrahimi-Fard, Kurusch and Tapia, Nikolas and Salvi, Cristopher},
+  journal={arXiv:2507.21006},
+  year={2025}
+}
