--- a/examples/ees_schemes/parameter_selection.ipynb
+++ b/examples/ees_schemes/parameter_selection.ipynb
@@ -19,24 +19,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "b6e70511-3c23-4e99-93bd-f74ddae5c193",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def symmetric_order(rk, tol = 1e-10):\n",
-    "    ew = rk.elementary_weights_map()\n",
-    "    m = (ew & kr.sign) * ew\n",
-    "    \n",
-    "    t = kr.Tree(None)\n",
-    "    while True:\n",
-    "        if abs(m(t) - bck.counit(t)) > tol:\n",
-    "            return t.nodes() - 1\n",
-    "        t = next(t)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
    "id": "4f133235-359e-480f-808d-5390762de03f",
    "metadata": {},
    "outputs": [],
@@ -75,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "c7a54a0d-b838-44f0-93a3-3eb15c47e16e",
    "metadata": {},
    "outputs": [],
@@ -89,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "aa8064df-7f3f-478a-9e90-15980108a6bf",
    "metadata": {},
    "outputs": [],
@@ -127,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "503fd238-f8e4-403a-b0a1-9b90c65670cc",
    "metadata": {},
    "outputs": [],
@@ -158,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "8f3c4003-4de4-4bdb-bded-bdb3fcbaae7a",
    "metadata": {},
    "outputs": [
@@ -172,7 +154,7 @@
    ],
    "source": [
     "method = EES25(0.1)\n",
-    "print(method.order(), symmetric_order(method))"
+    "print(method.order(), method.antisymmetric_order())"
    ]
   },
   {
@@ -193,17 +175,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "76e44948-3928-4a68-b6a1-7f17cf81ea3c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1677f5dda90>]"
+       "[<matplotlib.lines.Line2D at 0x19dffd22750>]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -232,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "37b4de6f-75bf-4a60-8442-67ec14f225d3",
    "metadata": {},
    "outputs": [
@@ -264,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "a1c5540b-b0cb-43c0-b701-f7e7d164a6b4",
    "metadata": {},
    "outputs": [],
@@ -307,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "f67e6cb4-247a-40ec-8847-0c2947d5c3a4",
    "metadata": {},
    "outputs": [
@@ -321,7 +303,7 @@
    ],
    "source": [
     "method = EES27(0.1)\n",
-    "print(method.order(), symmetric_order(method))"
+    "print(method.order(), method.antisymmetric_order())"
    ]
   },
   {
@@ -342,17 +324,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "2a9492d6-c579-4340-a987-9240c1e02c7f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1673f35a3f0>]"
+       "[<matplotlib.lines.Line2D at 0x19dff557530>]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -381,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "2d06016a-dabf-4668-a4fa-e3ec84b38e43",
    "metadata": {},
    "outputs": [
@@ -405,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "9a2f8d4c-2460-4185-a7cc-3bdf5e0c24b8",
    "metadata": {},
    "outputs": [
